[gd_scene load_steps=11 format=2]

[ext_resource path="res://img/backgroup_hub.png" type="Texture" id=1]
[ext_resource path="res://code/HUD.gd" type="Script" id=2]
[ext_resource path="res://font/Niagaraphobia-Bro3.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://img/Tartouille.png" type="Texture" id=4]
[ext_resource path="res://img/Twitter_Bird.png" type="Texture" id=5]


[sub_resource type="DynamicFont" id=1]
size = 34
outline_size = 1
outline_color = Color( 0.858824, 0.831373, 0.12549, 1 )
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
outline_size = 1
outline_color = Color( 0.858824, 0.831373, 0.12549, 1 )
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 56
outline_size = 2
outline_color = Color( 0.533333, 0.160784, 0.509804, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0.0745098, 0.352941, 0.968627, 1 )
extra_spacing_char = 2
extra_spacing_space = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 1
outline_color = Color( 0.992157, 0.443137, 0.0431373, 1 )
extra_spacing_char = 2
extra_spacing_space = 1
font_data = ExtResource( 3 )

[node name="HUD" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 0.15
custom_constants/hseparation = 20
columns = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="time" type="MarginContainer" parent="."]
margin_right = 200.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="NinePatchRect" parent="time"]
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 0 )
texture = ExtResource( 1 )

[node name="title" type="Label" parent="time/bg"]
modulate = Color( 1, 0.466667, 0.466667, 1 )
anchor_right = 0.7
anchor_bottom = 1.0
margin_left = 6.62021
margin_right = -13.3798
custom_fonts/font = SubResource( 1 )
text = "Time :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt" type="Label" parent="time/bg"]
modulate = Color( 1, 0.466667, 0.466667, 1 )
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.59802
margin_top = 1.59801
margin_right = -1.59802
margin_bottom = 1.59801
custom_fonts/font = SubResource( 2 )
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="MarginContainer" parent="."]
margin_left = 220.0
margin_right = 804.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bg" type="NinePatchRect" parent="title"]
self_modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 584.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 40 )
texture = ExtResource( 1 )

[node name="title" type="Label" parent="title/bg"]
modulate = Color( 0.752941, 0.298039, 0.898039, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.29285
margin_top = -0.8909
margin_right = -11.4142
margin_bottom = -0.8909
custom_fonts/font = SubResource( 3 )
text = "Trumpouille"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="MarginContainer" parent="."]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 86.0

[node name="bg" type="NinePatchRect" parent="score"]
margin_right = 200.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 40 )
texture = ExtResource( 1 )

[node name="title_tweet" type="TextureRect" parent="score/bg"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 41.9634
margin_top = 6.3454
margin_right = 41.9634
margin_bottom = 44.3454
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_splatch" type="TextureRect" parent="score/bg"]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 42.8909
margin_top = -2.0
margin_right = -9.10913
margin_bottom = 3.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nb_tweet" type="Label" parent="score/bg"]
modulate = Color( 0.0862745, 0.403922, 0.819608, 1 )
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 0.707108
custom_fonts/font = SubResource( 4 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nb_splatch" type="Label" parent="score/bg"]
modulate = Color( 0.823529, 0.317647, 0.0980392, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
